--- a/eShopSolution.BackendApi/appsettings.Development.json
+++ b/eShopSolution.BackendApi/appsettings.Development.json
@@ -8,6 +8,9 @@
   },
   "ConnectionStrings": {
     "eShopSolutionDb": "Data Source=RUTTIENMATVN\\SQLEXPRESS; Initial Catalog=eShopSolution; User ID=SA;Password=123"
+  },
+  "Tokens": {
+    "Key": "0123456789ABCDEF",
+    "Issuer": "https://danatea.net"
   }
-
 }
