--- a/eShopSolution.AdminWeb/appsettings.json
+++ b/eShopSolution.AdminWeb/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Tokens": {
+    "Key": "0123456789ABCDEF",
+    "Issuer": "https://danatea.net"
+  },
+
+  "BaseAddress": "http://localhost:5005"
 }
