--- a/eShopSolution.BackendApi/Properties/launchSettings.json
+++ b/eShopSolution.BackendApi/Properties/launchSettings.json
@@ -19,9 +19,9 @@
     },
     "eShopSolution.BackendApi": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
